--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,3 @@
-[package]
-name = "gym"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-chrono = { version = "0.4", features = ["serde"] }
-regex = "1.10"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-serde_with = { version = "3.4", features = ["chrono_0_4"] }
+[workspace]
+resolver = "2"
+members = ["parser", "webapp"]
